--- a/index.html
+++ b/index.html
@@ -4,4 +4,11 @@
             Hello world, I am 2678784
         </h1>
     </head>
+    <nav>
+        <ul>
+            <li>
+                <a href="2678784-lab2">lab2</a>
+            </li>
+        </ul>
+    </nav>
 </html>
